changed git urls

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ http://psl1ght.com/ (git: http://github.com/HACKERCHANNEL/PSL1GHT).
 .: License :.
 This software is licensed under the GNU General Public License v3. The source 
 code (along with source trees of previous versions) is available at the 
-OpenPS3FTP git repository at github: https://github.com/jjolano/openps3ftp
+OpenPS3FTP git repository: http://git-hacks.com/openps3ftp/openps3ftp
 
 .: General Usage Tutorial :.
 Just a small tutorial on the basics.
