--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@
 - New algorithms and methods
 - Should support Remote Play
 - Code optimizations for better performance and reliability
+- New git: http://git-hacks.com/openps3ftp/openps3ftp
 
 [Version 1.5 - March 4, 2011]
 - Improved performance and stability
