--- a/changelog
+++ b/changelog
@@ -7,7 +7,8 @@
 - New algorithms and methods
 - Should support Remote Play
 - Code optimizations for better performance and reliability
-- New git: http://git-hacks.com/openps3ftp/openps3ftp
+- Better, more efficient and reliable way of getting the IP (no inet needed - thanks andoma)
+- New git: http://git-hacks.com/openps3ftp
 
 [Version 1.5 - March 4, 2011]
 - Improved performance and stability
