--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 [Version 2.1.1 - April 3, 2011]
 - More optimizations (improved response times)
 - Reverted LIST format to support old clients
+- Squished some bugs
 
 [Version 2.1 - April 2, 2011]
 - Code optimizations
