--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[Version 2.2 - April 2011]
+- Fixed a minor hanging issue when starting OpenPS3FTP with no network connection
+- CPU usage decreased for screen saver
+- Fixed a minor threading issue with the screen saver
+- Added more compatibility for older FTP clients
+
 [Version 2.1.1 - April 3, 2011]
 - More optimizations (improved response times)
 - Reverted LIST format to support old clients
