--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+[Version 2.2.1 - May 13, 2011]
+- Fix some minor issues in the client code
+- Small adjustments
+- Perfected the UNIX-style LIST output
+
 [Version 2.2 - May 10, 2011]
 - Added more compatibility for older FTP clients
 - Rewrote code for PSL1GHT v2
