--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-[Version 2.2.1 - May 13, 2011]
-- Fix some minor issues in the client code
-- Small adjustments
+[Version 2.2.1 - May 2011]
+- Fixed some minor issues in the client code
+- Socket handling improvements
+- Fixed an epic fail in the client code
 - Perfected the UNIX-style LIST output
+- Improved passive mode function
 
 [Version 2.2 - May 10, 2011]
 - Added more compatibility for older FTP clients
