--- a/README
+++ b/README
@@ -11,17 +11,17 @@ Default login details:
 
 ---
 
-Source code git: http://git-hacks.com/openps3ftp
+Source code git: http://git.dashhacks.com/openps3ftp
 License: GPL (version 3)
 
 ---
 
 Follow me on Twitter: @jjolano
 Visit my homebrew website: http://jjolano.dashhacks.com
-Support me: http://bit.ly/gmzGcI
+Support me by donating: http://bit.ly/gmzGcI
 
 Thanks for using this program!
 
-If you are interested in winning a new console, follow @dashhacks on Twitter!
+Get a chance to win some prize money for being a dashhacks fan! Follow @dashhacks on Twitter!
 Visit http://dashhacks.com for more details.
 
