--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 - Fixed commands STRU and MODE. (should solve some problems on some clients)
 - STAT command now returns the program's version
 - Improved queue system for file transfers (better balancing of IO and network)
-- new git: http://git.dashhacks.com/openps3ftp
+- new git: https://github.com/jjolano/openps3ftp
 
 [Version 2.3 - May 29, 2011]
 - Fixed some minor issues in the client code
